--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -273,9 +273,9 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 
 \cventry{May 2001}{Bruce M. Boman, Jeremy Z. Fields, Oliver Bonham-Carter and Olaf A. Runquist}{\textit{``Computer modeling implicates stem cell overproduction in colon cancer initiation"}}{Cancer research, 2001}{}{}{}  
 
-\subsection{\textbf{Publications in Preparation}}
-\vspace{-.4cm}
-\cventry{Under construction}{Tentative Title: \emph{Mapping Ethical Continuance and Methodological Components Across Bioinformatics Literature}}{A review of the ethical impacts of articles on others regarding related concepts or project design}{}{}{}
+%\subsection{\textbf{Publications in Preparation}}
+%\vspace{-.4cm}
+%\cventry{Under construction}{Tentative Title: \emph{Mapping Ethical Continuance and Methodological Components Across Bioinformatics Literature}}{A review of the ethical impacts of articles on others regarding related concepts or project design}{}{}{}
 
 \vspace{1.0cm}
 \subsection{\textbf{Current Research Projects}}
