--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -103,10 +103,13 @@
 \cventry{1996 - 1997 (Summers)}{Diplom\'e}{Universit\'e Stendhal-Grenoble 3}{}{\textit{``Perfection of Oral French'' and ``Perfection of Written French''}}{}  % arguments 3 to 6 are optional
 %\vspace{-.4cm}
 
+
 \section{\textbf{Appointments}} %%%%%%%%%
 \vspace{-.4cm}
 
-\cventry{2017 - current}{Assistant Professor, Department of Computer and Information Science}{Allegheny College}{Meadville, PA}{}{}% arguments 3 to 6 are optional
+\cventry{2024 Fall- current}{Associate Professor, Department of Computer and Information Science}{Allegheny College}{Meadville, PA}{}{}% arguments 3 to 6 are optional
+
+\cventry{2017 - 2024 Spring}{Assistant Professor, Department of Computer and Information Science}{Allegheny College}{Meadville, PA}{}{}% arguments 3 to 6 are optional
 
 \cventry{2016}{Visiting Assistant Professor, Department of Computer Science}{Allegheny College}{PA}{}{}
 
@@ -154,7 +157,6 @@
 {Spring 2022, Fall 2023}{}{}{}
 
 %\cventry{}{Allegheny Enrichment: Data Analytics}{Area High School classes}%{Theme: Working with data, communication, manipulation, data ethics, etc}{Spring 2022}{}{}{}
-
 
 \cventry{}{Bioinformatics}{CMPSC 300}%{DNA, RNA, Protein analysis, sequence analysis, dynamic programming, Python tools and libraries for bioinformatics research, protein folding models, etc}
 {Semesters: Spring 2016, Fall 2017, Fall 2019, Spring 2021, Fall 2022}{}{}{}
@@ -216,14 +218,14 @@ As a data scientist, my research focuses on designing and developing software to
 %{https://foundation.mozilla.org/en/ what-we-fund/awards/teaching-responsible-computing-playbook/authors-and-contributors/}{}
 %\cventry{}{}{}{}
 
-\cventry{May 2024}{Oliver Bonham-Carter}{``Breaking Barriers in Research Projects:
+\cventry{\color{red}May 2024}{Oliver Bonham-Carter}{\color{red}``Breaking Barriers in Research Projects:
 BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scientific Literature"}{CNB-MAC / PyCon, 2024}{Poster: \url{https://www.oliverbonhamcarter.com/talks/pycon2024_poster_bonham-carter.pdf}}{}
 
 
-\cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
+\cventry{\color{red}August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{\color{red}``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
 
 
-\cventry{September 2023} {Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines"}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
+\cventry{\color{red}September 2023} {Oliver Bonham-Carter}{\color{red}``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines"}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
 
 \cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{Playbook made possible by the Responsible Computer Science Challenge, funded by Omidyar Network, Mozilla Foundation, Schmidt Futures, and Craig Newmark Philanthropies}{}
 
@@ -287,14 +289,21 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 
 \subsection{\textbf{Selected Open Source Projects}}
 \vspace{-.4cm}
-%\cventry{}{Class Types}{Brief description}{}{}{}{}
 
 %\cventry{}{}{Web: \url{https://github.com/obonhamcarter}}
 \cventry{}{GitHub Projects Portfolio}{Web: \url{https://github.com/obonhamcarter}}{An assortment of projects to facilitate teaching and or research}{}{}{}
 
+\cventry{}{\color{red}Infomaid}{\color{red}A simple textual AI RAG application using Ollama for generative AI, chatting with PDFs AND chatting (querying) documents prepared in xml.}{}{Web: \url{hhttps://github.com/developmentAC/infomaid}}{}{}
+
+
+
+
+\cventry{}{\color{red}csvLoad}{\color{red}Demo of how to open CSV files in Poetry.}{}{Web: \url{https://github.com/obonhamcarter/csv_load}}{}{}
+
+\cventry{}{GenePlayer}{DNA to Piano Music Converter: Put DNA sequences into piano from PubMed FASTA files.}{}{Web: \url{https://github.com/developmentAC/genePlayer}}{}{}
+
 \cventry{}{SenderReceiver}{A Python direct messaging tool.}{}%{GitHub clone link: \url{https://github.com/developmentAC/gradeAlert.git}}
 {Web: \url{https://github.com/developmentAC/senderReceiver}}{}{}
-
 
 \cventry{}{GradeAlert}{A Python tool to help with reporting grades from CSV files for GitHub Classroom courses.}{}%{GitHub clone link: \url{https://github.com/developmentAC/gradeAlert.git}}
 {Web: \url{https://github.com/developmentAC/gradeAlert}}{}{}
@@ -313,8 +322,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \cventry{}{GenMus}{A Python program to convert genetic DNA sequence code into audible signals to allow a listener to detect structure from genetic samples. Topics include music, genetic code, DNA, coding, noncoding}{}%{GitHub clone link: \url{https://github.com/developmentAC/geneticMusic.git}}
 {Web: \url{https://github.com/developmentAC/geneticMusic}}{}{}
 
-\cventry{}{GetCodingSeqs}{A Python project to create DNA data for analysis from Genbank files. This data comprises sequences that do or do not code for protein in nature, and could be applied to the GenMus project. Topics include: sequence generation, genbank parsing, coding regions, non-coding regions}{}%{GitHub clone link: \url{https://github.com/developmentAC/GetCodingSeqs.git}}
-{Web: \url{https://github.com/developmentAC/GetCodingSeqs}}{}{}
+\cventry{}{GetCodingSeqs}{A Python project to create DNA data for analysis from Genbank files. This data comprises sequences that do or do not code for protein in nature, and could be applied to the GenMus project. Topics include: sequence generation, genbank parsing, coding regions, non-coding regions}{}{Web: \url{https://github.com/developmentAC/GetCodingSeqs}}{}{}
 
 \cventry{}{Dabble}{A customizable command line program written in GO to teach how to add macros and commonly used functions to terminals.}{}%{GitHub clone link: \url{https://github.com/developmentAC/dabble.git}}
 {Web: \url{https://github.com/developmentAC/dabble}}{}
@@ -331,9 +339,15 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \subsection{\textbf{Open Source Curriculum}}
 \vspace{-.4cm}
 
-\cventry{}{Research Development}{\url{https://devisingresearch.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach juniors how to create a research idea, narrow it, determine feasibility and complete objectives. Other objectives include: gaining skill for applied research methodologies and for writing proposals.}{}{}
+%%%%
+\cventry{\color{red}2024 March}{\color{red}Curriculum Development}{\color{red}Demmler Grant}{\color{red}CIS Proposal for the Demmler Endowment for Innovative Teaching, 2024 Career preparation through hands-on learning in computing}{}{}
 
-\cventry{}{Bioinformatics}{\url{https://computationalbioinformatics.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach bioinformatics at the college level. Objectives: Students learn how to use DNA, RNA and protein analysis to answer research questions. Other objectives include: learning how to write research papers in bioinformatics the health-life sciences.}{}{}
+\cventry{\color{red}2023 May}{\color{red}Curriculum Development}{\color{red}Demmler Grant}{\color{red}CIS Proposal 1 for the Demmler Endowment for Innovative Teaching 2023, Developing pathways through the new CIS curriculum}{}{}
+
+
+\cventry{2022}{Research Development}{\url{https://devisingresearch.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach juniors how to create a research idea, narrow it, determine feasibility and complete objectives. Other objectives include: gaining skill for applied research methodologies and for writing proposals.}{}{}
+
+\cventry{2022}{Bioinformatics}{\url{https://computationalbioinformatics.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach bioinformatics at the college level. Objectives: Students learn how to use DNA, RNA and protein analysis to answer research questions. Other objectives include: learning how to write research papers in bioinformatics the health-life sciences.}{}{}
 
 \cventry{2023, 2022, 2021}{CS Fundraising and Media Channel development on YouTube}{\url{https://www.youtube.com/@alleghenycis}}{A collection of videos created for department fundraising initiatives \{``Power-Up'',``Love at First Byte'', and ``Reboot''\}' at the Department of Computer Information and Science.}{}{}
 
@@ -347,7 +361,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \subsection{\textbf{Committees}}
 \vspace{-0.4cm}
 
-\cventry{2024}{Institutional Effectiveness Committee (Assessment of Education)}{}{}{}{}
+\cventry{\color{red}2024}{\color{red}Institutional Effectiveness Committee (Assessment of Education)}{}{}{}{}
 \cventry{2023}{Internal Member of the Search Committee for the Department of Computer Science}{}{}{}{}
 \cventry{2021}{External member of the Search Committee for the Languages Department}{}{}{}{}
 
@@ -360,6 +374,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 
 %\cventry{month year}{who}{address}{\textit{title of paper}}{journal}{}{ } 
 %\cventry{}{March 2023}{Briefings in Bioinformatics}{}{}{}{}
+\cventry{}{\color{red}May 2024}{\color{red}Briefings in Bioinformatics}{}{}{}{}
 \cventry{}{March 2023}{Briefings in Bioinformatics}{}{}{}{}
 \cventry{}{Jan 2023}{Briefings in Bioinformatics}{}{}{}{}
 \cventry{}{December 2022}{Briefings in Bioinformatics}{}{}{}{}
@@ -383,6 +398,8 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \subsection{\textbf{Selected Community Service}}
 \vspace{-.4cm}
 % arguments 3 to 6 are optional
+
+\cventry{2024}{\color{red}DataGators Desk}{\color{red}A group of data science students and I were available on Fridays at noon in the Campus Center to help students and faculty who were working with data, modelling, statistical evaluations and similar areas of data science in their research.}{}{}{}{}
 
 \cventry{2024}{ReBoot Campaign: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
 \cventry{2023}{Love at First Byte: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
