--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -107,7 +107,7 @@
 \section{\textbf{Appointments}} %%%%%%%%%
 \vspace{-.4cm}
 
-\cventry{2024 Fall- current}{Associate Professor, Department of Computer and Information Science}{Allegheny College}{Meadville, PA}{}{}% arguments 3 to 6 are optional
+\cventry{2024 Fall- Present}{Associate Professor, Department of Computer and Information Science}{Allegheny College}{Meadville, PA}{}{}% arguments 3 to 6 are optional
 
 \cventry{2017 - 2024 Spring}{Assistant Professor, Department of Computer and Information Science}{Allegheny College}{Meadville, PA}{}{}% arguments 3 to 6 are optional
 
@@ -352,7 +352,6 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \cventry{2023, 2022, 2021}{CS Fundraising and Media Channel development on YouTube}{\url{https://www.youtube.com/@alleghenycis}}{A collection of videos created for department fundraising initiatives \{``Power-Up'',``Love at First Byte'', and ``Reboot''\}' at the Department of Computer Information and Science.}{}{}
 
 
-
 % cs529: internship
 
 %\cventry{}{Operating systems}{CPU, memory access, memory pages, kernels, software launching and running and similar concepts}{}{}{}{}
@@ -361,7 +360,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \subsection{\textbf{Committees}}
 \vspace{-0.4cm}
 
-\cventry{\color{red}2024}{\color{red}Institutional Effectiveness Committee (Assessment of Education)}{}{}{}{}
+\cventry{\color{red}2024 Spring - Present}{\color{red}Institutional Effectiveness Committee (Assessment of Education)}{}{}{}{}
 \cventry{2023}{Internal Member of the Search Committee for the Department of Computer Science}{}{}{}{}
 \cventry{2021}{External member of the Search Committee for the Languages Department}{}{}{}{}
 
@@ -399,7 +398,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \vspace{-.4cm}
 % arguments 3 to 6 are optional
 
-\cventry{2024}{\color{red}DataGators Desk}{\color{red}A group of data science students and I were available on Fridays at noon in the Campus Center to help students and faculty who were working with data, modelling, statistical evaluations and similar areas of data science in their research.}{}{}{}{}
+\cventry{2024 Spring to Present}{\color{red}DataGators Desk}{\color{red}A group of data science students and I were available on Fridays at noon in the Campus Center to help students and faculty who were working with data, modelling, statistical evaluations and similar areas of data science in their research.}{}{}{}{}
 
 \cventry{2024}{ReBoot Campaign: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
 \cventry{2023}{Love at First Byte: Fundraising Campaign for the Department of Computer Science}{}{}{}{}{}
