--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -162,8 +162,8 @@
 {Semesters: Spring 2016, Fall 2017, Fall 2019, Spring 2021, Fall 2022}{}{}{}
 
 
-\cventry{}{Data Analytics}{CMPSC 301}%{R programming, analysis, plotting, correlations, statistical models, ethics in research, etc}
-{Semesters: Fall 2017, Fall 2018, Fall 2020, Spring 2020, Summer 2021 (Scholarly), Fall 2021, Spring 2023, Allegheny Enrichment}{}{}{}
+\cventry{}{Data Science (Analytics)}{CMPSC 301}%{R programming, analysis, plotting, correlations, statistical models, ethics in research, etc}
+{Semesters: Fall 2017, Fall 2018, Fall 2020, Spring 2020, Summer 2021 (Scholarly), Fall 2021, Spring 2023, Allegheny Enrichment (2023, 2024), Fall 2024}{}{}{}
 
 \cventry{}{Database Systems}{CMPSC 305}%{SQL, No-SQL, Python, queries, data manipulation, design, creation, maintenance, MongoDB, Neo4J, networks, management systems, etc}
 {Semesters: Fall 2016, Spring 2018, Spring 2019, Fall 2020, Spring 2022, Fall 2023}{}{}{}
@@ -186,6 +186,9 @@
 
 
 \cventry{}{Senior Thesis I and II}{First and second reader}{Semesters (Fall and Spring): 2016-2024}{40 projects as first reader, 22 projects as second reader}{}{}{}
+
+\cventry{}{SWS 105 - Introduction to Communication Competencies}{First year student course}{Semester Fall: 2024}{}{}{}{}
+
 
 \cventry{}{Theory of Computation}{CMPSC 230}%{Turing machines, automata, symantics, symbols and language of programming, the halting problem, etc}
 {Fall 2016}{}{}{}
@@ -218,14 +221,20 @@ As a data scientist, my research focuses on designing and developing software to
 %{https://foundation.mozilla.org/en/ what-we-fund/awards/teaching-responsible-computing-playbook/authors-and-contributors/}{}
 %\cventry{}{}{}{}
 
-\cventry{\color{red}May 2024}{Oliver Bonham-Carter}{\color{red}``Breaking Barriers in Research Projects:
+
+\cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}\emph{accepted full paper}: ``An Efficient Text Analysis Tool for Streamlining Literature Reviews''}{Flairs (Florida Artificial Intelligence Research Society) 2025}{}{}
+
+\cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}\emph{accepted poster}: ``Infomaid -- An Offline AI Text-Generative Tool To Support Ethical Learning With Textual Assistance''}{CNB-MAC / PyCon, 2025}{}{}
+
+
+\cventry{May 2024}{Oliver Bonham-Carter}{\color{red}``Breaking Barriers in Research Projects:
 BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scientific Literature"}{CNB-MAC / PyCon, 2024}{Poster: \url{https://www.oliverbonhamcarter.com/talks/pycon2024_poster_bonham-carter.pdf}}{}
 
 
-\cventry{\color{red}August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{\color{red}``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
+\cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
 
 
-\cventry{\color{red}September 2023} {Oliver Bonham-Carter}{\color{red}``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines"}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
+\cventry{September 2023} {Oliver Bonham-Carter}{``Text Analysis of Ethical Influence in Bioinformatics and its Related Disciplines"}{Future of Information and Communication Conference. Springer, Cham, 2024}{}{}
 
 \cventry{August 2021}{Teaching Responsible Computing Playbook: Managing Resistance}{contributing author}{Mozilla Foundation}{}{Playbook made possible by the Responsible Computer Science Challenge, funded by Omidyar Network, Mozilla Foundation, Schmidt Futures, and Craig Newmark Philanthropies}{}
 
@@ -510,7 +519,7 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 \cvline{OS:}{Linux, Mac, Windows}{}{}
 \cvline{Web development:}{11nty, CSS Page design \& layout, Django, Flask, HTML, HUGO, JavaScript, Jekyll, Streamlit}{}{}
 \cvline{General:}{Git and GitHub programming, OpenOffice}{}{}
-\cvline{Programming:}{C/C++, GoLang, JavaScript, Java, MongoDB, Neo4J, Python, \LaTeX, R-statistic, SQL}{}{}
+\cvline{Programming:}{C/C++, GoLang, JavaScript, Java, MongoDB, Neo4J, Python, \LaTeX,Rust, R-statistic, SQL}{}{}
 \cvline{Graphics:}{Creation via \url{https://www.canva.com}, DALL$\cdot$E, GIMP, Inkscape, Krita, PhotoShop, Stable Diffusion (AI-image generation), Manim (Mathematical graphics in Python)}{}{}
 \cvline{Cloud Computing:}{Amazon Web Service (AWS), Cloud computing setup and operations, Docker, Kubernetes, Virtual Private Network (VPN) implementation}{}{}
 \cvline{Video:}{Green screening, Microphone adjustment, OBS, OpensShot, video recording, YouTube video channel growing}
