--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -227,7 +227,7 @@ As a data scientist, my research focuses on designing and developing software to
 \cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}\emph{accepted poster}: ``Infomaid -- An Offline AI Text-Generative Tool To Support Ethical Learning With Textual Assistance''}{CNB-MAC / PyCon, 2025}{}{}
 
 
-\cventry{May 2024}{Oliver Bonham-Carter}{\color{red}``Breaking Barriers in Research Projects:
+\cventry{May 2024}{Oliver Bonham-Carter}{``Breaking Barriers in Research Projects:
 BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scientific Literature"}{CNB-MAC / PyCon, 2024}{Poster: \url{https://www.oliverbonhamcarter.com/talks/pycon2024_poster_bonham-carter.pdf}}{}
 
 
