--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -222,13 +222,20 @@ As a data scientist, my research focuses on designing and developing software to
 %\cventry{}{}{}{}
 
 
-\cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}\emph{accepted full paper}: ``An Efficient Text Analysis Tool for Streamlining Literature Reviews''}{Flairs (Florida Artificial Intelligence Research Society) 2025}{}{}
 
-\cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}\emph{accepted poster}: ``Infomaid -- An Offline AI Text-Generative Tool To Support Ethical Learning With Textual Assistance''}{CNB-MAC / PyCon, 2025}{}{}
+%  - Bonham-Carter, O. (2025). An Efficient Text Analysis Tool for Streamlining Literature Reviews: Text Analysis To Streamline Literature Reviews. The International FLAIRS Conference Proceedings, 38(1). https://doi.org/10.32473/flairs.38.1.138991
+  
+
+\cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}``An Efficient Text Analysis Tool for Streamlining Literature Reviews''}{The International FLAIRS Conference Proceedings, 38(1). \url{https://doi.org/10.32473/flairs.38.1.138991}}{}{}
+
+\cventry{\color{red}May 2025}{Oliver Bonham-Carter}{\color{red}\emph{accepted poster}: ``Infomaid -- An Offline AI Text-Generative Tool To Support Ethical Learning With Textual Assistance''}{PyCon Pittsburgh, PA}{}{}
+
+\cventry{\color{red}February 2025}{Chezka Therese Quinola, Hemani Alaparth, Oliver Bonham-Carter}{\color{red}Node-Based Tracing: Employing Neo4j and Docker to Identify and Visualize Defective Components in a Supply Chain}{Ohio Celebration of Women in Computing (OCWiC)}{Huron, OH}{}
 
 
-\cventry{May 2024}{Oliver Bonham-Carter}{``Breaking Barriers in Research Projects:
-BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scientific Literature"}{CNB-MAC / PyCon, 2024}{Poster: \url{https://www.oliverbonhamcarter.com/talks/pycon2024_poster_bonham-carter.pdf}}{}
+
+
+\cventry{May 2024}{Oliver Bonham-Carter}{``Breaking Barriers in Research Projects: BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scientific Literature"}{PyCon, 2024}{Poster: \url{https://www.oliverbonhamcarter.com/talks/pycon2024_poster_bonham-carter.pdf}}{}
 
 
 \cventry{August 2023}{Abigail Waryanka, Becky Dawson, Oliver Bonham-Carter}{``DEG-PI: A Computational Tool that Identifies Differentially Expressed Genes and Enriched Pathways in Cancer Tissues"}{CNB-MAC / ACMBCB, 2023}{}{}
@@ -302,9 +309,11 @@ BeagleTM, a Powerful Python-based Text Mining Tool for Visual Discovery in Scien
 %\cventry{}{}{Web: \url{https://github.com/obonhamcarter}}
 \cventry{}{GitHub Projects Portfolio}{Web: \url{https://github.com/obonhamcarter}}{An assortment of projects to facilitate teaching and or research}{}{}{}
 
-\cventry{}{\color{red}Infomaid}{\color{red}A simple textual AI RAG application using Ollama for generative AI, chatting with PDFs AND chatting (querying) documents prepared in xml.}{}{Web: \url{hhttps://github.com/developmentAC/infomaid}}{}{}
+\cventry{}{\color{red}Infomaid}{\color{red}A simple textual AI RAG application using Ollama for generative AI, chatting with PDFs AND chatting (querying) documents prepared in xml.}{}{Web: \url{https://github.com/developmentAC/infomaid}}{}{}
 
 
+
+\cventry{}{\color{red}BeagleTA}{\color{red}A text analysis processing pipeline for the analysis of relationships between documents based on word usage.}{}{Web: \url{https://github.com/developmentAC/BeagleTA}}{}{}
 
 
 \cventry{}{\color{red}csvLoad}{\color{red}Demo of how to open CSV files in Poetry.}{}{Web: \url{https://github.com/obonhamcarter/csv_load}}{}{}
