--- a/cv_obc.tex
+++ b/cv_obc.tex
@@ -296,9 +296,15 @@ As a data scientist, my research focuses on designing and developing software to
 %\cventry{Under construction}{Tentative Title: \emph{Mapping Ethical Continuance and Methodological Components Across Bioinformatics Literature}}{A review of the ethical impacts of articles on others regarding related concepts or project design}{}{}{}
 
 \vspace{1.0cm}
-\subsection{\textbf{Current Research Projects}}
+\subsection{\textbf{Research Projects}}
 %\vspace{-0.4cm}
 
+
+%\cventry{}{}{Web: \url{https://github.com/obonhamcarter}}
+\cventry{}{GitHub Projects Portfolio}{Web: \url{https://github.com/obonhamcarter}}{An assortment of projects to facilitate teaching and or research}{}{}{}
+
+\cventry{}{BeagleTA project development}{ A text analysis processing pipeline for the analysis of relationships between documents based on word usage.}{Current project: \url{https://github.com/developmentAC/BeagleTA}}{}{}
+ 
 \cventry{}{BeagleTM project development}{Text analysis platform to determine connections between scientific articles.}{Current project: \url{https://github.com/developmentAC/beagleTM}}{}{}
 
 \cventry{}{Gene Expression}{Programming a new analysis dashboard to determine the co-expression of genes with are likely playing roles in causing breast cancer onset.}{Current project: \url{https://github.com/developmentAC/genExSt}}{}{}
@@ -306,17 +312,20 @@ As a data scientist, my research focuses on designing and developing software to
 \subsection{\textbf{Selected Open Source Projects}}
 \vspace{-.4cm}
 
-%\cventry{}{}{Web: \url{https://github.com/obonhamcarter}}
-\cventry{}{GitHub Projects Portfolio}{Web: \url{https://github.com/obonhamcarter}}{An assortment of projects to facilitate teaching and or research}{}{}{}
+\cventry{}{myQR}{An Interactive QR Code Generator for the Browser.}{}{Web: \url{https://github.com/developmentAC/myQR}}{}{}
 
-\cventry{}{\color{red}Infomaid}{\color{red}A simple textual AI RAG application using Ollama for generative AI, chatting with PDFs AND chatting (querying) documents prepared in xml.}{}{Web: \url{https://github.com/developmentAC/infomaid}}{}{}
+\cventry{}{grade\_alert\_rs}{An automated tool written in Rust to help teachers by extracting student grade information from CSV files so that it can be conveniently diffused to members of a class.}{}{Web: \url{https://github.com/developmentAC/letter}}{}{}
+
+\cventry{}{Letter}{An ASCII art generator program. Convert strings to huge ASCII letter banners for project splash screens.}{}{Web: \url{https://github.com/developmentAC/letter}}{}{}
+
+\cventry{}{Chat\_rs}{A simple IP-to-IP chat application built in Rust to help teach network programming.}{}{Web: \url{https://github.com/developmentAC/chat_rs}}{}{}
+
+\cventry{}{Rinfomaid}{\color{red}A textual AI application and markdown archival system written in Rust.}{}{Web: \url{https://github.com/developmentAC/rinfomaid}}{}{}
+
+\cventry{}{Infomaid}{\color{red}A simple textual AI RAG application using Ollama for generative AI, chatting with PDFs AND chatting (querying) documents prepared in xml.}{}{Web: \url{https://github.com/developmentAC/infomaid}}{}{}
 
 
-
-\cventry{}{\color{red}BeagleTA}{\color{red}A text analysis processing pipeline for the analysis of relationships between documents based on word usage.}{}{Web: \url{https://github.com/developmentAC/BeagleTA}}{}{}
-
-
-\cventry{}{\color{red}csvLoad}{\color{red}Demo of how to open CSV files in Poetry.}{}{Web: \url{https://github.com/obonhamcarter/csv_load}}{}{}
+\cventry{}{csvLoad}{\color{red}Demo of how to open CSV files in Poetry.}{}{Web: \url{https://github.com/obonhamcarter/csv_load}}{}{}
 
 \cventry{}{GenePlayer}{DNA to Piano Music Converter: Put DNA sequences into piano from PubMed FASTA files.}{}{Web: \url{https://github.com/developmentAC/genePlayer}}{}{}
 
@@ -361,7 +370,6 @@ As a data scientist, my research focuses on designing and developing software to
 \cventry{\color{red}2024 March}{\color{red}Curriculum Development}{\color{red}Demmler Grant}{\color{red}CIS Proposal for the Demmler Endowment for Innovative Teaching, 2024 Career preparation through hands-on learning in computing}{}{}
 
 \cventry{\color{red}2023 May}{\color{red}Curriculum Development}{\color{red}Demmler Grant}{\color{red}CIS Proposal 1 for the Demmler Endowment for Innovative Teaching 2023, Developing pathways through the new CIS curriculum}{}{}
-
 
 \cventry{2022}{Research Development}{\url{https://devisingresearch.com/}}{A class-in-a-box website containing all materials, assignments, labs and activities used to teach juniors how to create a research idea, narrow it, determine feasibility and complete objectives. Other objectives include: gaining skill for applied research methodologies and for writing proposals.}{}{}
 
@@ -466,10 +474,7 @@ As a data scientist, my research focuses on designing and developing software to
 
 \cvline{March 2021}{\textbf{MozFest: Mozilla Festival}: \emph{Responsible Computing Curricula -- How do we do it? }}{Info Link: \url{https://schedule.mozillafestival.org/session/877N8H-1}}{}
 
-
 \cvline{March 2017}{\textbf{Teaching Integrated Bioinformatics}: \emph{St Vincent College, }}{Convention of PA Bioinformatics Instructors}{}
-
-
 
 %\vspace{-.5cm}
 
@@ -510,7 +515,6 @@ As a data scientist, my research focuses on designing and developing software to
 
 \cvline{April 2013}{\textbf{AWARD}: First Place: \textit{Award of Excellence in Research}, Student Capstone Conference, College of Information Science and Technology, Peter Kiewit Institute, Omaha, Nebraska. }{Award amount: $\$1,000$}{}
 
-
 %\vspace{-.5cm}
 \section{\textbf{Speaking Languages}}
 
@@ -528,7 +532,7 @@ As a data scientist, my research focuses on designing and developing software to
 \cvline{OS:}{Linux, Mac, Windows}{}{}
 \cvline{Web development:}{11nty, CSS Page design \& layout, Django, Flask, HTML, HUGO, JavaScript, Jekyll, Streamlit}{}{}
 \cvline{General:}{Git and GitHub programming, OpenOffice}{}{}
-\cvline{Programming:}{C/C++, GoLang, JavaScript, Java, MongoDB, Neo4J, Python, \LaTeX,Rust, R-statistic, SQL}{}{}
+\cvline{Programming:}{C/C++, GoLang, JavaScript, Java, MongoDB, Neo4J, Python, \LaTeX, Rust, R-statistic, SQL}{}{}
 \cvline{Graphics:}{Creation via \url{https://www.canva.com}, DALL$\cdot$E, GIMP, Inkscape, Krita, PhotoShop, Stable Diffusion (AI-image generation), Manim (Mathematical graphics in Python)}{}{}
 \cvline{Cloud Computing:}{Amazon Web Service (AWS), Cloud computing setup and operations, Docker, Kubernetes, Virtual Private Network (VPN) implementation}{}{}
 \cvline{Video:}{Green screening, Microphone adjustment, OBS, OpensShot, video recording, YouTube video channel growing}
